startup script updated