@@ -54,9 +54,6 @@ JCONSOLE_REMOTE="-Dcom.sun.management.jmxremote.port=${OGN_GATEWAY_JMX_PORT} \
   -Djava.rmi.server.hostname=0.0.0.0"
 
 
-# uncomment and update accordingly if you need to tune ogn-client connection
-#APRS_OPTS="-Dogn.server.name=52.16.247.84"
-
 if [[ ! -d ${OGN_GATEWAY_TMP_DIR} ]]; then
   mkdir ${OGN_GATEWAY_TMP_DIR}
 fi
@@ -72,7 +69,6 @@ else
   JAVA_BIN=/usr/bin/java
 fi
 
-#JVM_OPTS="-Xms256m -Xmx256m -XX:+PrintGCDetails -XX:+UseParallelGC -XX:MaxGCPauseMillis=100"
 
 if [[ -z ${JVM_OPTS} ]]; then
   # use defaults
@@ -122,7 +118,7 @@ process_start() {
 
 really_start() {
 
-  ${JAVA_BIN} ${DEBUG_OPTS} ${JCONSOLE_REMOTE} ${JVM_OPTS} ${APRS_OPTS} \
+  ${JAVA_BIN} ${DEBUG_OPTS} ${JCONSOLE_REMOTE} ${JVM_OPTS} \
          -Djava.library.path=${OGN_GATEWAY_LIB_DIR} \
          -Djava.io.tmpdir=${OGN_GATEWAY_TMP_DIR} \
          -Dlog4j.configuration=${OGN_GATEWAY_LOG4J_CONF_FILE} \
